--- a/vercel.json
+++ b/vercel.json
@@ -3,14 +3,14 @@
     "version": 2,
     "builds": [
       {
-        "src": "index.js",
-        "use": "@vercel/static-build"
+        "src": "src/index.js",
+        "use": "@vercel/node"
       }
     ],
     "routes": [
       {
-        "src": "/api/(.*)",
-        "dest": "index.js"
+        "src": "/(.*)",
+        "dest": "src/index.js"
       }
     ]
 }
